--- a/3_semi/week1/index.html
+++ b/3_semi/week1/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- ① before -->
-    <div class="cards-container">
+    <div id="cards-container">
       <!-- ② prepend -->
       <div class="card">こんにちは</div>
       <!-- ③ append -->
