--- a/3_semi/week1/レシピ1 発展/レシピ1-2 発展1/index.html
+++ b/3_semi/week1/レシピ1 発展/レシピ1-2 発展1/index.html
@@ -1,7 +1,3 @@
-<!--
-  1. "!"と入力して、tabキーを押し、HTMLの雛形を作成する。
-  2. script要素でmain.jsを読み込む。
--->
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -15,6 +11,8 @@
       <h2 id="display">0</h2>
     </div>
     <button id="plus-button">+1</button>
+    <button id="minus-button">-1</button>
+    <button id="twice-button">2倍</button>
 
     <script src="main.js"></script>
   </body>
