--- a/3_semi/week1/レシピ1 発展/レシピ1-3 発展2/index.html
+++ b/3_semi/week1/レシピ1 発展/レシピ1-3 発展2/index.html
@@ -1,7 +1,3 @@
-<!--
-  1. "!"と入力して、tabキーを押し、HTMLの雛形を作成する。
-  2. script要素でmain.jsを読み込む。
--->
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -12,8 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="figure" class="transition square"></div>
+    <div id="figure" class="square"></div>
 
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
