--- a/3_semi/week1/レシピ1 発展/レシピ1-3 発展2/index.html
+++ b/3_semi/week1/レシピ1 発展/レシピ1-3 発展2/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="figure" class="square"></div>
+    <div id="figure" class="square transition"></div>
 
     <script src="main.js"></script>
   </body>
