--- a/3_semi/week2/レシピ2 発展/レシピ2-3 発展2/index.html
+++ b/3_semi/week2/レシピ2 発展/レシピ2-3 発展2/index.html
@@ -16,10 +16,10 @@
       <option value="basenji">basenji</option>
     </select>
 
+    <div>画像の枚数を指定してください（最大9枚）</div>
+    <input type="number" id="number" min="1" max="9" />
     <button id="button">決定</button>
-    <div>
-      <img src="" alt="おねんね中" id="dog-image" />
-    </div>
+    <div id="img-container"></div>
 
     <script src="main.js"></script>
   </body>
