小数点浮動誤差うざい

--- a/3_semi/week1/レシピ1 発展/レシピ1-2 発展3/index.html
+++ b/3_semi/week1/レシピ1 発展/レシピ1-2 発展3/index.html
@@ -7,18 +7,18 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="display"></div>
+    <div id="display" style="width: 200px; height: 50px;"></div>
     <input type="button" value="C" id="button-C" />
     <br />
     <input type="button" value="7" id="button-7" onclick="up(7)" />
     <input type="button" value="8" id="button-8" onclick="up(8)" />
     <input type="button" value="9" id="button-9" onclick="up(9)" />
-    <input type="button" value="/" id="button-/" />
+    <input type="button" value="➗" id="button-/" />
     <br />
     <input type="button" value="4" id="button-4" onclick="up(4)" />
     <input type="button" value="5" id="button-5" onclick="up(5)" />
     <input type="button" value="6" id="button-6" onclick="up(6)" />
-    <input type="button" value="*" id="button-*" />
+    <input type="button" value="×" id="button-*" />
     <br />
     <input type="button" value="1" id="button-1" onclick="up(1)" />
     <input type="button" value="2" id="button-2" onclick="up(2)" />
