カレーの紹介

--- a/3_semi/week3/自販機/index.html
+++ b/3_semi/week3/自販機/index.html
@@ -33,8 +33,18 @@
         <button class="vending-machine__buy-buttons__button" id="tea-button">
           お茶 100円
         </button>
+
         <button class="vending-machine__buy-buttons__button" id="coke-button">
           コーラ 130円
+        </button>
+        <button class="vending-machine__buy-buttons__button" id="beer-button">
+          ビール 150円
+        </button>
+        <button
+          class="vending-machine__oturi-buttons__button"
+          id="oturi-button"
+        >
+          おつり
         </button>
       </div>
       <div class="vending-machine__items-container" id="items-container"></div>
